# sse-rs

./: Cargo.toml
server-sent_events/: Cargo.toml  README.md
server-sent_events/src/: event.rs  lib.rs  stream.rs  utils.rs
server-sent_events/src/stream/: mod.rs  sleep.rs
