[package]
name = "server-sent_events"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Server-Sent Events (SSE)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/sse-rs"
homepage = "https://github.com/bk-rs/sse-rs"
documentation = "https://docs.rs/server-sent_events"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["stream", "stream_sleep_tokio"]

stream = ["futures-util", "futures-stream-select-ext", "cfg-if"]
stream_sleep_tokio = ["tokio/time"]
stream_sleep_async_timer = ["async-timer"]

_priv_test_http = ["http"]
_priv_test_mime = ["mime"]

[dependencies]
http = { version = "0.2", default-features = false, optional = true }
mime = { version = "0.3", default-features = false, optional = true }

futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
futures-stream-select-ext = { version = "0.1", default-features = false, features = ["std"], optional = true }
cfg-if = { version = "1.0", default-features = false, optional = true }

tokio = { version = "1.16", default-features = false, optional = true }
async-timer = { version = "1.0.0-beta", default-features = false, optional = true }

[dev-dependencies]
futures-executor = { version = "0.3" }
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    ["stream_sleep_tokio", "stream_sleep_async_timer"],
    # 
    ["_priv_test_http", "stream"],
    ["_priv_test_http", "stream_sleep_tokio"],
    ["_priv_test_http", "stream_sleep_async_timer"],
    # 
    ["_priv_test_mime", "stream"],
    ["_priv_test_mime", "stream_sleep_tokio"],
    ["_priv_test_mime", "stream_sleep_async_timer"],
]
