[package]
name = "server-sent_events"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Server-Sent Events (SSE)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/sse-rs"
homepage = "https://github.com/bk-rs/sse-rs"
documentation = "https://docs.rs/server-sent_events"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["stream"]

stream = ["futures-util", "futures-stream-select-ext", "async-interval"]

_priv_test_http = ["http"]
_priv_test_mime = ["mime"]

[dependencies]
http = { version = "0.2", default-features = false, optional = true }
mime = { version = "0.3", default-features = false, optional = true }

futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
futures-stream-select-ext = { version = "0.1", default-features = false, features = ["std"], optional = true }
async-interval = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
futures-executor = { version = "0.3" }
tokio = { version = "1.16", features = ["macros", "rt-multi-thread", "time"] }
async-interval = { version = "0.1", default-features = false, features = ["impl_tokio"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    # 
    ["_priv_test_http", "stream"],
    # 
    ["_priv_test_mime", "stream"],
]
